[gd_scene load_steps=27 format=3 uid="uid://c4vrfmm2msww4"]

[ext_resource type="Script" uid="uid://84kyrtxvj1bk" path="res://Scripts/NPCs/NPC3/npc_3.gd" id="1_reqsp"]
[ext_resource type="PackedScene" uid="uid://bocp2dvmkrjji" path="res://Scenes/NPCs/NPC3/npc_3_bullet.tscn" id="2_aeuxg"]
[ext_resource type="Shader" uid="uid://dmn0dmxfshr1d" path="res://Resources/Shaders/hit_flash.gdshader" id="2_nr8vv"]
[ext_resource type="Texture2D" uid="uid://d1plxe101a57f" path="res://Assets/Characters/NPCs/Enemies/Drons png.png" id="3_7c4oi"]
[ext_resource type="PackedScene" uid="uid://cmbpwc3svcncr" path="res://Scenes/NPCs/npcs_state_machine.tscn" id="4_3162h"]
[ext_resource type="Script" uid="uid://cx84lgm1wridf" path="res://Scripts/NPCs/NPC3/States/idle.gd" id="5_7c4oi"]
[ext_resource type="Script" uid="uid://bati7y2xn35un" path="res://Scripts/NPCs/NPC3/States/wander.gd" id="6_aeuxg"]
[ext_resource type="Script" uid="uid://bo4tkcgg2xs07" path="res://Scripts/NPCs/NPC3/States/chase.gd" id="7_3h43j"]
[ext_resource type="Script" uid="uid://dtwt3pulcqpyt" path="res://Scripts/NPCs/NPC3/States/cool_down.gd" id="8_72lm3"]
[ext_resource type="Script" uid="uid://dulaa31a14w7l" path="res://Scripts/NPCs/NPC3/States/shoot.gd" id="9_2qq0d"]
[ext_resource type="Script" uid="uid://dqf2aw5uik5o2" path="res://Scripts/NPCs/NPC3/States/reload.gd" id="10_7bo64"]
[ext_resource type="Script" uid="uid://dryygqq302684" path="res://Scripts/NPCs/NPC3/States/talk.gd" id="11_83qok"]
[ext_resource type="Script" uid="uid://mfyel1umjups" path="res://Scripts/NPCs/NPC3/States/damage.gd" id="12_d746a"]
[ext_resource type="Script" uid="uid://hct8g0dwy6rm" path="res://Dialogues/dialogue_box.gd" id="13_8qtjb"]
[ext_resource type="Script" uid="uid://bcpkuo780gomt" path="res://Scripts/NPCs/NPC3/States/die.gd" id="13_slwx8"]
[ext_resource type="LabelSettings" uid="uid://ck3j7eyrm2267" path="res://Resources/Labels/dialogues_label_settings.tres" id="14_n8cd2"]
[ext_resource type="Texture2D" uid="uid://bk3ipmaetj1hl" path="res://Assets/VFX/Particle_Material.png" id="15_ydqi1"]
[ext_resource type="Script" uid="uid://lngqm66mqljp" path="res://addons/ez_dialogue/ez_dialogue_node.gd" id="16_avtt7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6da7p"]
size = Vector2(20, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n864f"]
resource_local_to_scene = true
shader = ExtResource("2_nr8vv")
shader_parameter/flashColor = Color(1, 1, 1, 1)
shader_parameter/flashValue = 0.0

[sub_resource type="Animation" id="Animation_57c1o"]
resource_name = "Attacking"
length = 0.4
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.12, 0.18, 0.24, 0.3, 0.36),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2, -2, -2),
"update": 1,
"values": [13, 14, 15, 16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_okxx1"]
resource_name = "Death"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [65, 66, 67, 69, 70, 71, 72]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.35),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="Animation" id="Animation_a4b5n"]
resource_name = "Idle"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_dpk7x"]
resource_name = "Running"
length = 0.32
loop_mode = 1
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [26, 27, 28, 29, 30, 31, 32, 33]
}

[sub_resource type="Animation" id="Animation_kcs6m"]
resource_name = "Talking"
length = 0.2
loop_mode = 1
step = 0.05

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fbn5t"]
_data = {
&"Attacking": SubResource("Animation_57c1o"),
&"Death": SubResource("Animation_okxx1"),
&"Idle": SubResource("Animation_a4b5n"),
&"Running": SubResource("Animation_dpk7x"),
&"Talking": SubResource("Animation_kcs6m")
}

[node name="NPC" type="CharacterBody2D" node_paths=PackedStringArray("idleState", "wanderingState", "chasingState", "cooldownState", "shootingState", "reloadingState", "talkingState", "damagingState", "deathState")]
collision_layer = 65536
collision_mask = 1537
script = ExtResource("1_reqsp")
idleState = NodePath("NPCsStateMachine/Idle")
wanderingState = NodePath("NPCsStateMachine/Wander")
chasingState = NodePath("NPCsStateMachine/Chase")
cooldownState = NodePath("NPCsStateMachine/CoolDown")
shootingState = NodePath("NPCsStateMachine/Shoot")
reloadingState = NodePath("NPCsStateMachine/Reload")
talkingState = NodePath("NPCsStateMachine/Talk")
damagingState = NodePath("NPCsStateMachine/Damage")
deathState = NodePath("NPCsStateMachine/Die")
bulletScene = ExtResource("2_aeuxg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6da7p")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_n864f")
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_7c4oi")
flip_h = true
region_enabled = true
region_rect = Rect2(121, 35, 31, 16)

[node name="RayCasts" type="Node2D" parent="Sprite2D"]

[node name="GRayCast" type="RayCast2D" parent="Sprite2D/RayCasts"]
position = Vector2(8, 8.5)
target_position = Vector2(0, 12)

[node name="WRayCast" type="RayCast2D" parent="Sprite2D/RayCasts"]
position = Vector2(0, 6.66667)
target_position = Vector2(12, 0)
collision_mask = 3

[node name="AttackingRayCast" type="RayCast2D" parent="Sprite2D/RayCasts"]
position = Vector2(0, 6.66667)
target_position = Vector2(16.6667, 4.76837e-07)
collision_mask = 256

[node name="PlayerDetector" type="RayCast2D" parent="Sprite2D/RayCasts"]
position = Vector2(0, 6.66667)
target_position = Vector2(250, 0)
collision_mask = 256

[node name="GunBarrel" type="Marker2D" parent="Sprite2D"]
position = Vector2(8, 8)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fbn5t")
}

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -2.86102e-06)
scale = Vector2(27.2, 12.8)

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="VisibleOnScreenNotifier2D"]
enable_node_path = NodePath("../..")

[node name="NPCsStateMachine" parent="." node_paths=PackedStringArray("startingState") instance=ExtResource("4_3162h")]
startingState = NodePath("Idle")

[node name="Idle" type="Node" parent="NPCsStateMachine"]
script = ExtResource("5_7c4oi")

[node name="Wander" type="Node" parent="NPCsStateMachine"]
script = ExtResource("6_aeuxg")
animationName = null

[node name="Chase" type="Node" parent="NPCsStateMachine"]
script = ExtResource("7_3h43j")

[node name="CoolDown" type="Node" parent="NPCsStateMachine"]
script = ExtResource("8_72lm3")

[node name="Shoot" type="Node" parent="NPCsStateMachine"]
script = ExtResource("9_2qq0d")

[node name="Reload" type="Node" parent="NPCsStateMachine"]
script = ExtResource("10_7bo64")

[node name="Talk" type="Node" parent="NPCsStateMachine"]
script = ExtResource("11_83qok")

[node name="Damage" type="Node" parent="NPCsStateMachine"]
script = ExtResource("12_d746a")

[node name="Die" type="Node" parent="NPCsStateMachine"]
script = ExtResource("13_slwx8")

[node name="Timers" type="Node" parent="."]

[node name="shootingTimer" type="Timer" parent="Timers"]

[node name="RGSTimer" type="Timer" parent="Timers"]
editor_description = "Roaming game states timer"

[node name="CooldownPeriodTimer" type="Timer" parent="Timers"]

[node name="DamagingTimer" type="Timer" parent="Timers"]
wait_time = 0.1

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
visible = false
offset_left = -39.0
offset_top = -32.0
offset_right = 40.0
offset_bottom = -27.0
value = 100.0
nine_patch_stretch = true
tint_progress = Color(0.907709, 0.0900278, 5.77569e-07, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="DialogueBox" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -120.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("13_8qtjb")

[node name="DialogueText" type="Label" parent="UI/DialogueBox"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -16.0
offset_right = 30.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
label_settings = ExtResource("14_n8cd2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DialogueTimerProgress" type="TextureProgressBar" parent="UI/DialogueBox"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_bottom = 32.0
grow_horizontal = 0
value = 100.0
fill_mode = 5
nine_patch_stretch = true
texture_progress = ExtResource("15_ydqi1")

[node name="DialogueTimer" type="Timer" parent="UI/DialogueBox"]

[node name="EzDialogue" type="Node" parent="UI/DialogueBox"]
script = ExtResource("16_avtt7")
metadata/_custom_type_script = "uid://lngqm66mqljp"

[connection signal="animation_finished" from="AnimationPlayer" to="NPCsStateMachine/Damage" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timers/shootingTimer" to="NPCsStateMachine/Shoot" method="_on_shooting_timer_timeout"]
[connection signal="timeout" from="Timers/RGSTimer" to="NPCsStateMachine/Idle" method="_on_rgs_timer_timeout"]
[connection signal="timeout" from="Timers/RGSTimer" to="NPCsStateMachine/Wander" method="_on_rgs_timer_timeout"]
[connection signal="timeout" from="Timers/CooldownPeriodTimer" to="NPCsStateMachine/CoolDown" method="_on_cooldown_period_timer_timeout"]
[connection signal="timeout" from="Timers/DamagingTimer" to="NPCsStateMachine/Damage" method="_on_damaging_timer_timeout"]
[connection signal="timeout" from="UI/DialogueBox/DialogueTimer" to="UI/DialogueBox" method="_on_dialogue_timer_timeout"]
[connection signal="dialogue_generated" from="UI/DialogueBox/EzDialogue" to="NPCsStateMachine/Talk" method="_on_ez_dialogue_dialogue_generated"]
[connection signal="end_of_dialogue_reached" from="UI/DialogueBox/EzDialogue" to="NPCsStateMachine/Talk" method="_on_ez_dialogue_end_of_dialogue_reached"]
